src/Novolis.Audio.Bindings/Interop/NovolisAudioNative.g.cs

// <auto-generated />
// Regenerate: dotnet run --project codegen/Novolis.Audio.Pipeline -- run generate
// ManifestSha256: b1081f1c6bfeff38735a48d44ea77d05c2cbea2b0d14c6aafa53936c24f544c9
#nullable enable
using System.Runtime.InteropServices;
using System.Runtime.InteropServices.Marshalling;
using Novolis.Audio.Interop;

namespace Novolis.Audio.Interop;
/// <summary>Low-level novolis_audio entry points (manifest-generated <c>[LibraryImport]</c>).</summary>
internal static partial class NovolisAudioNative
{
    private const string AudioDll = "novolis_audio";
    [LibraryImport(AudioDll)]
    [return: MarshalAs(UnmanagedType.I1)]
    internal static partial bool na_Init();
    [LibraryImport(AudioDll)]
    [return: MarshalAs(UnmanagedType.I1)]
    internal static partial bool na_IsSoundPlaying(nint handle);
    [LibraryImport(AudioDll)]
    internal static partial nint na_LoadSound([MarshalUsing(typeof(Utf8StringMarshaller))] string filePath);
    [LibraryImport(AudioDll)]
    [return: MarshalAs(UnmanagedType.I1)]
    internal static partial bool na_PlaySound(nint handle);
    [LibraryImport(AudioDll)]
    internal static partial void na_SetMasterVolume(float volume);
    [LibraryImport(AudioDll)]
    internal static partial void na_SetSoundVolume(nint handle, float volume);
    [LibraryImport(AudioDll)]
    internal static partial void na_StopSound(nint handle);
    [LibraryImport(AudioDll)]
    internal static partial void na_Uninit();
    [LibraryImport(AudioDll)]
    internal static partial void na_UnloadSound(nint handle);
}
